--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Gaia-X DID</title>
+  <title>Repositorio DID - Gaia-X</title>
 </head>
 <body>
-  <h1>Repositorio de Documento DID</h1>
+  <h1>DID Web activo</h1>
+  <p>Tu documento DID está en: <a href="./.well-known/did.json">.well-known/did.json</a></p>
 </body>
 </html>
